--- a/CafeAvalonia/CafeAvalonia.csproj
+++ b/CafeAvalonia/CafeAvalonia.csproj
@@ -18,11 +18,13 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.6" />
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.6" />
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.6" />
+		<PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.6" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Include="Avalonia.Diagnostics" Version="11.3.6">
             <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="ClosedXML" Version="0.105.0" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
@@ -34,5 +36,11 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
+        <PackageReference Include="PDFsharp" Version="6.2.3" />
+        <PackageReference Include="PdfSharpCore" Version="1.3.67" />
+    </ItemGroup>
+
+    <ItemGroup>
+		<EmbeddedResource Include="Fonts\Roboto-Regular.ttf" />
     </ItemGroup>
 </Project>
